# Rover_II

./: .gitignore  CMakeLists.txt  README.md  branch_archive_test.txt  index.html  package-lock.json  package.json  package.xml  test.html  tmuxinator.yml  webpack.config.js
config/: info.yaml
config/stereo/: Cal-UI324xLE-M-1-4103300419.txt  Cal-UI324xLE-M-1-4103300420.txt
include/: linear_motor_driver.h  motor_driver.h
launch/: camera.launch  camera.launch.save  joy.launch  motor_driver_rs485.launch  motor_driver_usb.launch
msg/: motor_info.msg  motor_ror.msg  tcmc.msg
power_board/: power_board.ino
rover_config/: CMakeLists.txt  package.xml
rover_config/launch/: RQT-all-joints-sine-test.perspective  test.launch
rover_config/rover_collada/: Body_lowPoly.dae  Body_lowPoly.old.dae  Exploration_Print_Logo_BlauTransparent.tif  Rocker_lowPoly-Blender-280.dae  Rocker_lowPoly.dae  Rocker_lowPoly_test.dae  Wheel_lowPoly.dae  Wheel_lowPoly_old.dae  cube.dae  old-blender_rocker.blend  old-blender_rocker.blend1  untitled.blend  untitled.blend1  untitled.dae  untitled1.blend  untitled1.dae  wheel.blend
rover_config/rviz/: nav.rviz  qr_detection.rviz
rover_config/urdf/: arm.xacro  body.xacro  rover.urdf  rover.urdf.xacro  rover.xacro  test.xacro  testarm.urdf  testarm.xacro  wheel.urdf.xacro  wheel.xacro
rover_config/urdf/Moveit/: moveittest.urdf
rover_control/: CMakeLists.txt  package.xml
rover_control/config/: arm_control.yaml  diffdrive.yaml  nimrod_control.yaml  position_joint.yaml  r2d2.yaml  rocker.yaml
rover_control/include/: rover_control.hpp  rover_control_arm.hpp  rover_interface_trinamic.hpp  rover_motor.hpp  rover_trinamic_stepper.hpp
rover_control/launch/: control_arm_test.launch  control_test.launch  gazebo.launch  rover_control.launch  test.launch
rover_control/python scripts/: can_dummy.py
rover_control/scripts/: can_dummy.py  loadCAN.bash
rover_control/src/: platform_linux.cpp  rover_control.cpp  rover_motor.cpp  (+5 more)
rover_util/: CMakeLists.txt  package.xml
rover_util/launch/: downsize_cameras.launch
scripts/: disparity_converter.py  startup  wifi_setup.bash
setup_assist/: .setup_assistant  CMakeLists.txt  package.xml
src/: App.vue  controller_joy.cpp  controller_simple.cpp  linear_motor_driver.cpp  linear_motor_driver_ros.cpp  motor_driver.cpp  motor_driver_ros.cpp  motor_driver_setup.cpp  motor_driver_test.cpp  power_board_ros.cpp  serial_example_node.cpp  setup.txt
(+32 files in other folders)
