cmake_minimum_required(VERSION 2.8.3)
project(exploration_rover_i)

find_package(catkin REQUIRED COMPONENTS
  roscpp
  serial
  std_msgs
)

catkin_package(
  CATKIN_DEPENDS
    serial
    std_msgs
)

include_directories(
  ${catkin_INCLUDE_DIRS}
  include
)

add_executable(serial_example_node src/serial_example_node.cpp)
add_executable(motor_driver_test src/motor_driver_test.cpp src/motor_driver.cpp)

target_link_libraries(serial_example_node
  ${catkin_LIBRARIES}
)
target_link_libraries(motor_driver_test
  ${catkin_LIBRARIES}
)
